--- a/contact.htm
+++ b/contact.htm
@@ -5,6 +5,8 @@
 
 
 
+
+  
   
   
   
@@ -12,6 +14,8 @@
 
 
 
+
+  
   
   
   
@@ -19,6 +23,8 @@
 
 
 
+
+  
   
   
   
@@ -26,6 +32,8 @@
 
 
 
+
+  
   
   
   
@@ -33,6 +41,8 @@
 
 
 
+
+  
   
   
   
@@ -40,6 +50,8 @@
 
 
 
+
+  
   
   
   
@@ -47,6 +59,9 @@
 
 
 
+
+  
+  
   
   
   
@@ -58,6 +73,7 @@
   
   
   
+  
   <meta content="Pierre Dubois English Page" name="description">
 </head>
 
@@ -66,7 +82,9 @@
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt;"><font size="4">&nbsp;</font></p>
+
 
 
 
@@ -74,7 +92,9 @@
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"><br>
+
 
 
 
@@ -85,9 +105,11 @@ of Toulouse
 
 
 
+
 &nbsp;Scientific
 Director of the Toulouse School of Economics
 <a target="_blank" href="http://www.ut-capitole.fr/"></a></p>
+
 
 
 
@@ -98,9 +120,11 @@ Research Fellow</p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;<a href="http://www.iufrance.fr/les-membres-de-liuf/membre/1140-pierre-dubois.html" target="_blank">Institut
 Universitaire de France</a> Junior
 Member (2011-2015)</p>
+
 
 
 
@@ -110,13 +134,16 @@ Association of Applied Econometrics</a></p>
 
 
 
+
 <span style="font-family: Cambria;">&nbsp;Managing Editor of&nbsp;</span><a style="font-family: Cambria;" href="http://www.journals.elsevier.com/international-journal-of-industrial-organization/" target="_blank">International Journal of Industrial
 Organization</a><span style="font-family: Cambria;">
 (2013-2018)<br>
 
 
 
+
 </span><span style="font-family: Cambria;">&nbsp;Associate Editor of <a href="https://www.journals.elsevier.com/european-economic-review" target="_blank">European Economic Review</a> (2012-)<br>
+
 
 
 
@@ -125,8 +152,10 @@ and Statisctics</a></span> (2009-)<br>
 
 
 
+
 &nbsp;E-mail:&nbsp;<a href="mailto:pierre.dubois@tse-fr.eu">pierre.dubois@tse-fr.eu</a>
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;</p>
+
 
 
 
@@ -135,11 +164,14 @@ and Statisctics</a></span> (2009-)<br>
 
 
 
+
 &nbsp;Applied Microeconomics,&nbsp;Applied Econometrics<br>
 
 
 
+
 </p>
+
 
 
 
@@ -149,22 +181,30 @@ Economics, Development Economics</p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;</p>
+
 
 <span style="font-family: Cambria;">&nbsp;</span><font style="font-family: Cambria;"><a href="cv_web.pdf" target="_blank">Complete
 CV</a><br>
 
 
+
 &nbsp;<a href="http://www.tse-fr.eu/people/pierre-dubois" target="_blank">TSE web page<br>
+
 
 
 </a>&nbsp;<a href="http://scholar.google.fr/citations?user=6Eo7zF0AAAAJ&amp;hl=fr" target="_blank">Google Scholar Page</a><br>
 
 
+
 &nbsp;<a href="https://voxeu.org/users/pierredubois0" target="_blank">CEPR
 Vox page</a></font>
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"></p>
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"></p>
+<p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"></p>
+
 
 
 
@@ -173,8 +213,10 @@ Toulouse School of Economics</p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">21
 all&eacute;e de Brienne</p>
+
 
 
 
@@ -183,11 +225,14 @@ Toulouse</p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">France</p>
 
 
 
+
 <font style="font-family: Cambria;"><a href="https://voxeu.org/users/pierredubois0" target="_blank"><br>
+
 
 
 
