--- a/other.htm
+++ b/other.htm
@@ -262,7 +262,7 @@ Conferences</a></h3>
  name="Forthcoming">Forthcoming</a>
 :</p>
 &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - 10th conference on "Industrial Organization
+&nbsp;&nbsp; &nbsp; - 10th conference on "Industrial Organization
 and the Food Industry", Toulouse School of Economics,
 June 6-7, 2019
 <p
