--- a/other.htm
+++ b/other.htm
@@ -261,10 +261,6 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp; &nbsp; - 10th conference on "Industrial Organization
-and the Food Industry", Toulouse School of Economics,
-June 6-7, 2019
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - CEPR Applied IO, June 14-16, 2019, Madrid</p>
@@ -274,6 +270,11 @@ June 6-7, 2019
 International Association of Applied Econometrics, June 25-28, 2019,
 Nicosia, Cyprus</p>
 Past :
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp; - 10th conference on "Industrial Organization
+and the Food Industry", Toulouse School of Economics,
+June 6-7, 2019</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; -&nbsp;Hong Kong, University, Business
