--- a/other.htm
+++ b/other.htm
@@ -164,8 +164,8 @@ of the Conference on "<a
  href="https://www.tse-fr.eu/fr/conferences/2008-economics-health-care-and-pharmaceutical-industry"
  target="_blank">The
 Economics of the Health Care and the Pharmaceutical Industry</a>",
-IDEI Toulouse, January 25-26, 2008. <a href="program%20healthcare2008"
- target="_blank">Program</a>. </p>
+IDEI Toulouse, January 25-26, 2008. <a
+ href="program%20healthcare2008.pdf" target="_blank">Program</a>. </p>
   </li>
   <li>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
