--- a/other.htm
+++ b/other.htm
@@ -261,6 +261,16 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Cambria;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- Yale IO
+seminar, September 10, 2019<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- Harvard IO
+seminar, September 16, 2019<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- New York
+University, IO
+seminar, October 4, 2019<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;-&nbsp;University of
+Arizona, IO
+seminar, November 1, 2019<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- Princeton IO
 seminar, December 5, 2019<br>
 &nbsp;&nbsp;&nbsp; &nbsp; Past :
