--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -4,6 +4,10 @@
 
 
 
+
+
+  
+  
   
   
   
@@ -11,6 +15,10 @@
 
 
 
+
+
+  
+  
   
   
   
@@ -18,6 +26,10 @@
 
 
 
+
+
+  
+  
   
   
   
@@ -25,6 +37,10 @@
 
 
 
+
+
+  
+  
   
   
   
@@ -32,6 +48,10 @@
 
 
 
+
+
+  
+  
   
   
   
@@ -39,6 +59,10 @@
 
 
 
+
+
+  
+  
   
   
   
@@ -46,6 +70,12 @@
 
 
 
+
+
+  
+  
+  
+  
   
   
   
@@ -61,16 +91,24 @@
 
 
 
-<p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Cambria;"><i><a name="Workingpapers"></a>Working
+
+
+<p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><i><a name="Workingpapers"></a>Working
 papers:</i></p>
 
 
 
-<p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Cambria;"><a name="IO"></a></p>
+
+
+<p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><a name="IO"></a></p>
 
 
 
-<p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Cambria;"><i><br>
+
+
+<p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><i><br>
+
+
 
 
 
@@ -78,114 +116,163 @@ papers:</i></p>
 
 
 
-<br>
 
 
 
-<ul style="font-family: Cambria;">
 
 
 
-  <li><span style="" lang="EN-GB">"<a href="DuboisSaethreParallelTrade_2020.pdf" target="_blank">On the Effect of
+  <span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a style="color: rgb(0, 0, 0); text-decoration: none;" href="DuboisSaethreParallelTrade_2020.pdf" target="_blank">On the Effect of
 Parallel
 Trade on
 Manufacturers' and Retailers' Profits in the Pharmaceutical Sector</a>"
 with
-Morten Saethre</span>,
-revise and resubmit at&nbsp;<span style="font-style: italic;">Econometrica</span></li>
+Morten Saethre,
+revise and resubmit at&nbsp;</span><span style="font-style: italic; font-family: Calibri;">Econometrica</span><span style="font-family: Calibri;">
 
 
 
-  <li><span style="" lang="EN-GB">"<a href="DuboisGriffithOConnell.pdf" target="_blank">How Well
-Targeted are Soda Taxes?</a>" with Rachel Griffith and
-Martin O'Connell, </span>revise and resubmit at&nbsp;<span style="font-style: italic;">American
-Economic Review</span><span style="font-style: italic;"></span></li>
+  &nbsp;&nbsp;&nbsp; <br>
+
+<br>
+
+&nbsp;&nbsp;&nbsp; "<a style="text-decoration: none;" href="DuboisGriffithOConnell.pdf" target="_blank"><span style="color: rgb(0, 0, 0);">How Well
+Targeted are Soda Taxes</span>?</a>" with Rachel Griffith and
+Martin O'Connell, revise and resubmit at&nbsp;</span><span style="font-style: italic; font-family: Calibri;">American
+Economic Review</span><span style="font-family: Calibri;">
 
 
 
-  <li><span style="" lang="EN-GB">"<a href="dp.pdf" target="_blank">Price
+  <br>
+
+&nbsp;&nbsp;&nbsp; <br>
+
+&nbsp;&nbsp;&nbsp; "<a style="color: rgb(0, 0, 0); text-decoration: none;" href="dp.pdf" target="_blank">Price
 Dispersion and Information Frictions: Evidence from Supermarket
-Purchases</a>", with Helena Perrone</span>,
+Purchases</a>", with Helena Perrone,
 revise and resubmit
-at <span style="font-style: italic;">American
-Economic Journal, Microeconomics</span></li>
+at </span><span style="font-style: italic; font-family: Calibri;">American
+Economic Journal, Microeconomics</span><span style="font-family: Calibri;">
 
 
 
-  <li>"<a style="color: rgb(51, 0, 204);" href="DuboisKyle_Cancer.pdf" target="_blank"><span style="" lang="EN-US">Are
+  <br>
+
+&nbsp;&nbsp;&nbsp; <br>
+
+&nbsp;&nbsp;&nbsp; "</span><a style="color: rgb(0, 0, 0); text-decoration: none; font-family: Calibri;" href="DuboisKyle_Cancer.pdf" target="_blank"><span style="" lang="EN-US">Are
 Cancer Drugs Worth the Price? The
 Effects of
 Pharmaceutical
-Innovation on Cancer Mortality Rates</span></a>",
+Innovation on Cancer Mortality Rates</span></a><span style="font-family: Calibri;">",
 with Margaret
-Kyle</li>
+Kyle
 
 
 
-  <li><span style="" lang="EN-GB">"<a href="dubois_jodar.pdf" target="_blank">Price
+  <br>
+
+<br>
+
+&nbsp;&nbsp;&nbsp; "<a style="color: rgb(0, 0, 0); text-decoration: none;" href="dubois_jodar.pdf" target="_blank">Price
 and Brand Competition between Differentiated Retailers: A Structural
 Econometric Model</a>", with Sandra
-Jodar</span>,
-revise and resubmit at <span style="font-style: italic;">Quantitative
-Economics</span><span style=""><span lang="EN-US"></span></span><span style="" lang="EN-US"></span> </li>
+Jodar,
+revise and resubmit at </span><span style="font-style: italic; font-family: Calibri;">Quantitative
+Economics</span><span style="font-family: Calibri;"><span lang="EN-US"></span>
 
 
 
-  <li><span lang="EN-US">"<a href="BDmay2015.pdf" target="_blank">Identifying
+  <br>
+
+<br>
+
+&nbsp;&nbsp;&nbsp; "<a style="color: rgb(0, 0, 0); text-decoration: none;" href="BDmay2015.pdf" target="_blank">Identifying
 Two Part Tariff Contracts with Buyer Power: Empirical Estimation on
-Food Retailing</a>", </span><span lang="EN-US">with
-C&eacute;line Bonnet</span></li>
+Food Retailing</a>", with
+C&eacute;line Bonnet
 
 
 
-  <li>"<a href="nutrition_risk_sharing.pdf" target="_blank">Nutrition
+  <br>
+
+<br>
+
+&nbsp;&nbsp;&nbsp; "</span><a style="color: rgb(0, 0, 0); text-decoration: none; font-family: Calibri;" href="nutrition_risk_sharing.pdf" target="_blank">Nutrition
 and Risk Sharing within the
-Household</a>", with Ethan
-Ligon</li>
+Household</a><span style="font-family: Calibri;">", with Ethan
+Ligon
 
 
 
-  <li>&nbsp;"<a href="hetpakdef.pdf" target="_blank">Consumption
+  <br>
+
+<br>
+
+&nbsp;&nbsp;&nbsp; &nbsp;"</span><a style="text-decoration: none; font-family: Calibri;" href="hetpakdef.pdf" target="_blank"><span style="color: rgb(0, 0, 0);">Consumption
 Insurance With Heterogeneous Preferences. Can Sharecropping Help
-Complete Markets?</a>",&nbsp;
+Complete Markets</span>?</a><span style="font-family: Calibri;">",&nbsp;
 revise and
-resubmit at the <i>Journal of
-Political Economy</i> </li>
+resubmit at the </span><i style="font-family: Calibri;">Journal of
+Political Economy</i><span style="font-family: Calibri;">
 
 
 
-  <li><span style="font-style: italic;"></span>"<a href="multi.pdf" target="_blank">Multitask
-Moral Hazard, Incentive Contracts and Land Value</a>",
-revise and resubmit at the <i>Annals
+ </span><br style="font-family: Calibri;">
+
+<br style="font-family: Calibri;">
+<span style="font-family: Calibri;">
+&nbsp;&nbsp;&nbsp; </span><span style="font-style: italic; font-family: Calibri;"></span><span style="font-family: Calibri;">"</span><a style="color: rgb(0, 0, 0); text-decoration: none; font-family: Calibri;" href="multi.pdf" target="_blank">Multitask
+Moral Hazard, Incentive Contracts and Land Value</a><span style="font-family: Calibri;">",
+revise and resubmit at the </span><i style="font-family: Calibri;">Annals
 of&nbsp;Economics and
-Statistics</i> </li>
+Statistics</i><br style="font-family: Calibri;">
+<span style="font-family: Calibri;">
+&nbsp;&nbsp;&nbsp; 
 
 
 
-  <li> "<a href="risk_het.pdf" target="_blank">Heterogeneity
+  <br>
+
+&nbsp;&nbsp;&nbsp; "</span><a style="color: rgb(0, 0, 0); text-decoration: none; font-family: Calibri;" href="risk_het.pdf" target="_blank">Heterogeneity
 of Preferences, Limited Commitment and Coalitions: Empirical Evidence
-on the Limits to Risk Sharing in Rural Pakistan</a>"</li>
+on the Limits to Risk Sharing in Rural Pakistan</a><span style="font-family: Calibri;">"
 
 
 
-  <li> <span style=""><span class="style1style2style9" lang="EN-GB">&ldquo;</span><span lang="EN-US"><a href="Academic-Journals_031106.pdf" target="_blank">Academic
+  <span class="style1style2style9" lang="EN-GB"><br>
+
+<br>
+
+&nbsp;&nbsp;&nbsp; &ldquo;</span><span lang="EN-US"><a style="color: rgb(0, 0, 0); text-decoration: none;" href="Academic-Journals_031106.pdf" target="_blank">Academic
 Journals as Two-Sided Platforms:
 Empirical Evidence from Data on French Libraries</a>&rdquo;,
 with
-Adriana Hernandez-Perez and Marc Ivaldi</span></span></li>
+Adriana Hernandez-Perez and Marc Ivaldi</span>
 
 
 
-  <li><span style=""><span lang="EN-US">"<a href="dls.pdf" target="_blank">Pooled Procurement of Drugs&nbsp;in Low and Middle
+  <span lang="EN-US"><br>
+
+<br>
+
+&nbsp;&nbsp;&nbsp; "<a style="color: rgb(0, 0, 0); text-decoration: none;" href="dls.pdf" target="_blank">Pooled Procurement of Drugs&nbsp;in Low and Middle
 Income Countries</a>" with&nbsp;Yassine Lefouili and St&eacute;phane
-Straub</span></span></li>
+Straub</span>
 
 
 
-  <li><span style=""><span lang="EN-US">"<a href="dgv05172019.pdf" target="_blank">Bargaining and International
+  <span lang="EN-US"><br>
+
+<br>
+
+&nbsp;&nbsp;&nbsp; "<a style="color: rgb(0, 0, 0); text-decoration: none;" href="dgv05172019.pdf" target="_blank">Bargaining and International
 Reference Pricing in the Pharmaceutical Industry</a>" with Ashvin
 Gandhi
-and Shoshana Vasserman</span></span></li>
+and Shoshana Vasserman</span></span>
+<ul style="font-family: Calibri;">
+
+
 
 
 
@@ -193,50 +280,79 @@ and Shoshana Vasserman</span></span></li>
 
 
 
-<span style="font-weight: bold;">Work in progress:</span>
-<ul style="font-family: Cambria;">
+
+
+<span style="font-weight: bold; font-family: Calibri;">Work in progress:</span><span style="font-family: Calibri;">
 
 
 
-  <li>"Consumer Demand with
+  <br>
+
+<br>
+
+&nbsp;&nbsp;&nbsp; "Consumer Demand with
 Unobserved Stockpiling and Intertemporal
-Price Discrimination" with Thierry Magnac </li>
+Price Discrimination" with Thierry Magnac
 
 
 
-  <li><span style="" lang="EN-GB">"Identifying the Effects
+  <br>
+
+<br>
+
+&nbsp;&nbsp;&nbsp; "Identifying the Effects
 of
 Scientific Information and Recommendations on Physicians Prescribing
-Behavior" </span><span style="" lang="EN-GB">with Tuba
-Tun&ccedil;el</span></li>
+Behavior" with Tuba
+Tun&ccedil;el
 
 
 
-  <li>"Intrahousehold
+  <br>
+
+<br>
+
+&nbsp;&nbsp;&nbsp; "Intrahousehold
 Risk Sharing, Incentives and Nutrition:
-Evidence from the Philippines", with Ethan Ligon</li>
+Evidence from the Philippines", with Ethan Ligon
 
 
 
-  <li>"Food Consumption and
+  <br>
+
+<br>
+
+&nbsp;&nbsp;&nbsp; "Food Consumption and
 Obesity in France: Identification of
 Causal Effects and Price Elasticities", with C&eacute;line Bonnet
 and
-Val&eacute;rie Orozco</li>
+Val&eacute;rie Orozco
 
 
 
-  <li><span style="" lang="EN-GB">"Non
+  <br>
+
+<br>
+
+&nbsp;&nbsp;&nbsp; "Non
 Parametric Decomposition of the Distributional Change of Body Mass
-Index in China", with Ju Qiu</span></li>
+Index in China", with Ju Qiu
 
 
 
-  <li>"Incentives
+  <br>
+
+<br>
+
+&nbsp;&nbsp;&nbsp; "Incentives
 and
 Discrimination in Agricultural
 Contracts: Identification and Structural Estimation on French
-Data&rdquo; with Pascal Lavergne</li>
+Data&rdquo; with Pascal Lavergne
+</span>
+<ul style="font-family: Calibri;">
+
+
 
 
 
@@ -244,7 +360,9 @@ Data&rdquo; with Pascal Lavergne</li>
 
 
 
-<i>
-</i><span style="font-weight: bold; font-family: Cambria;"><span style="font-weight: bold;"></span></span>
+
+
+<i style="font-family: Calibri;">
+</i><span style="font-weight: bold; font-family: Calibri;"><span style="font-weight: bold;"></span></span>
 </body>
 </html>
