--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -146,7 +146,8 @@ Gandhi
 and Shoshana Vasserman</span></span><span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; <br>
 <br>
-&nbsp; &nbsp; "<a href="duboistunceljune2020.pdf" target="_blank">Identifying
+&nbsp; &nbsp; "<a style="text-decoration: none;"
+ href="duboistunceljune2020.pdf" target="_blank">Identifying
 the Effects
 of
 Scientific Information and Recommendations on Physicians Prescribing
