--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -146,7 +146,7 @@ Gandhi
 and Shoshana Vasserman</span></span><span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; <br>
 <br>
-&nbsp; &nbsp; "<a style="text-decoration: none;"
+&nbsp; &nbsp; "<a style="text-decoration: none; color: rgb(0, 0, 0);"
  href="duboistunceljune2020.pdf" target="_blank">Identifying
 the Effects
 of
