--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -25,19 +25,8 @@ papers:</i></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><i><br>
 </i></p>
-<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
- style="color: rgb(0, 0, 0); text-decoration: none;"
- href="DuboisSaethreParallelTrade_2020.pdf" target="_blank">On the
-Effect of
-Parallel
-Trade on
-Manufacturers' and Retailers' Profits in the Pharmaceutical Sector</a>"
-with
-Morten Saethre,
-revise and resubmit at&nbsp;</span><span
- style="font-style: italic; font-family: Calibri;">Econometrica</span><span
- style="font-family: Calibri;"> &nbsp;&nbsp;&nbsp; <br>
-<br>
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"> <br>
 &nbsp;&nbsp;&nbsp; "<a style="text-decoration: none;"
  href="DuboisGriffithOConnell.pdf" target="_blank"><span
  style="color: rgb(0, 0, 0);">How Well
