--- a/contact.htm
+++ b/contact.htm
@@ -5,6 +5,8 @@
 
 
 
+
+  
   
   
   
@@ -12,6 +14,8 @@
 
 
 
+
+  
   
   
   
@@ -19,6 +23,8 @@
 
 
 
+
+  
   
   
   
@@ -26,6 +32,8 @@
 
 
 
+
+  
   
   
   
@@ -33,6 +41,8 @@
 
 
 
+
+  
   
   
   
@@ -40,6 +50,8 @@
 
 
 
+
+  
   
   
   
@@ -47,6 +59,9 @@
 
 
 
+
+  
+  
   
   
   
@@ -58,6 +73,7 @@
   
   
   
+  
   <meta content="Pierre Dubois English Page" name="description">
 </head>
 
@@ -66,33 +82,32 @@
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><font size="4">&nbsp;</font></p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><font size="4">&nbsp;Pierre DUBOIS</font>&nbsp;</p>
-
-
-
-<p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"></p>
-
-
-
-<p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;<a style="text-decoration: none; color: rgb(0, 0, 0);" target="_blank" href="https://economics.harvard.edu/people/pierre-dubois">Visiting
+<span style="font-family: Calibri;">&nbsp; &nbsp;&nbsp; </span>
+<p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;<a style="color: rgb(44, 19, 209);" target="_blank" href="https://economics.harvard.edu/people/pierre-dubois">Visiting
 Professor, Harvard University, Department of Economics
 (2019-2020)</a></p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;Professor
-of Economics,&nbsp; <a style="text-decoration: none; color: rgb(0, 0, 0);" target="_blank" href="http://tse-fr.eu/">Toulouse
+of Economics,&nbsp; <a style="color: rgb(44, 19, 209);" target="_blank" href="http://tse-fr.eu/">Toulouse
 School of Economics</a><span style="color: rgb(0, 0, 0);">,&nbsp;</span><a style="text-decoration: none; color: rgb(0, 0, 0);" target="_blank" href="http://www.ut-capitole.fr/">University
 of Toulouse
 1 Capitole</a><br>
 
 
 
+
 </p>
+
 
 
 
@@ -103,15 +118,18 @@ Research Fellow</p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span style="color: rgb(0, 0, 0);">&nbsp;</span><a style="text-decoration: none; color: rgb(0, 0, 0);" href="http://www.iufrance.fr/les-membres-de-liuf/membre/1140-pierre-dubois.html" target="_blank">Institut
 Universitaire de France</a> Junior
 Member (2011-2015)</p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;Fellow
 of the <a style="text-decoration: none; color: rgb(0, 0, 0);" href="https://appliedeconometrics.org/about/fellows" target="_blank">International
 Association of Applied Econometrics</a></p>
+
 
 <span style="font-family: Calibri;">
 
@@ -121,9 +139,11 @@ Director of the Toulouse School of Economics (2015-2019)
 
 
 
+
 <span style="font-family: Calibri;">&nbsp;Managing Editor of&nbsp;</span><a style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;" href="http://www.journals.elsevier.com/international-journal-of-industrial-organization/" target="_blank">International Journal of Industrial
 Organization</a><span style="font-family: Calibri;">
 (2013-2018)<br>
+
 
 
 
@@ -131,8 +151,10 @@ Organization</a><span style="font-family: Calibri;">
 
 
 
+
 &nbsp;Associate Editor of <a style="text-decoration: none; color: rgb(0, 0, 0);" href="https://annals.ensae.fr/" target="_blank">Annals of Economics
 and Statisctics</a> (2009-)</span><br style="font-family: Calibri;">
+
 
 <span style="font-family: Calibri;">
 
@@ -141,8 +163,10 @@ and Statisctics</a> (2009-)</span><br style="font-family: Calibri;">
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a name="Research Interests">&nbsp;Research Interests</a>
 :<br>
+
 
 
 
@@ -150,7 +174,9 @@ and Statisctics</a> (2009-)</span><br style="font-family: Calibri;">
 
 
 
+
 </p>
+
 
 
 
@@ -160,7 +186,9 @@ Economics, Development Economics</p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;</p>
+
 
 
 
@@ -169,11 +197,14 @@ CV</a><br>
 
 
 
+
 &nbsp;<a style="text-decoration: none;" href="http://www.tse-fr.eu/people/pierre-dubois" target="_blank"><span style="color: rgb(0, 0, 0);">TSE web page</span><br>
 
 
 
+
 </a>&nbsp;<a style="text-decoration: none; color: rgb(0, 0, 0);" href="http://scholar.google.fr/citations?user=6Eo7zF0AAAAJ&amp;hl=fr" target="_blank">Google Scholar Page</a><br>
+
 
 
 
@@ -183,11 +214,14 @@ Vox page</a></font>
 
 
 
-<p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"></p>
-
-
 
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"></p>
+
+
+
+
+<p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"></p>
+
 
 
 
@@ -196,8 +230,10 @@ Toulouse School of Economics</p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">1
 Esplanade de l'Universit&eacute;</p>
+
 
 
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">31080
@@ -205,11 +241,14 @@ Toulouse Cedex 06</p>
 
 
 
+
 <p style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">France</p>
 
 
 
+
 <font style="font-family: Calibri;"><a href="https://voxeu.org/users/pierredubois0" target="_blank"><br>
+
 
 
 
