--- a/Publications.htm
+++ b/Publications.htm
@@ -45,8 +45,9 @@ Parallel
 Trade on
 Manufacturers' and Retailers' Profits in the Pharmaceutical Sector</a>"
 with
-Morten Saethre,
-revise and resubmit at&nbsp;</span><span
+Morten Saethre, </span></big><big><span
+ style="color: rgb(0, 0, 0); font-family: Calibri;" lang="EN-GB">forthcoming</span></big><big><span
+ style="font-family: Calibri;">&nbsp;</span><span
  style="font-style: italic; font-family: Calibri; font-weight: bold;">Econometrica</span><span
  style="font-family: Calibri;"><span style="font-weight: bold;"> </span>&nbsp;&nbsp;&nbsp;</span></big>
 <ol style="color: rgb(0, 0, 0); font-family: Calibri;">
