--- a/Publications.htm
+++ b/Publications.htm
@@ -36,7 +36,18 @@
 publications:</i></big></p>
 <ul style="color: rgb(0, 0, 0); font-family: Calibri;">
 </ul>
-<big><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
+<big><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span></big><span
+ style="font-family: Calibri;"> <br>
+&nbsp;&nbsp;&nbsp; "<a
+ style="text-decoration: none; color: rgb(0, 0, 0);"
+ href="../../../ADMINIST/web/pierredubois.github.io/DuboisGriffithOConnell.pdf"
+ target="_blank"><span style="color: rgb(0, 0, 0);">How Well
+Targeted are Soda Taxes</span>?</a>" with Rachel Griffith and
+Martin O'Connell, conditionally accepted at&nbsp;</span><span
+ style="font-style: italic; font-family: Calibri; font-weight: bold;">American
+Economic Review</span><span style="font-family: Calibri;"><span
+ style="font-weight: bold;"> </span><br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
  style="color: rgb(0, 0, 0); text-decoration: none;"
  href="../../../ADMINIST/web/pierredubois.github.io/DuboisSaethreParallelTrade_2020.pdf"
  target="_blank">On the
@@ -45,17 +56,16 @@ Parallel
 Trade on
 Manufacturers' and Retailers' Profits in the Pharmaceutical Sector</a>"
 with
-Morten Saethre, </span></big><big><span
- style="color: rgb(0, 0, 0); font-family: Calibri;" lang="EN-GB">forthcoming</span></big><big><span
+Morten Saethre, </span><span
+ style="color: rgb(0, 0, 0); font-family: Calibri;" lang="EN-GB">forthcoming</span><span
  style="font-family: Calibri;">&nbsp;</span><span
  style="font-style: italic; font-family: Calibri; font-weight: bold;">Econometrica</span><span
- style="font-family: Calibri;"><span style="font-weight: bold;"> </span>&nbsp;&nbsp;&nbsp;</span></big>
+ style="font-family: Calibri;"><span style="font-weight: bold;"> </span>&nbsp;&nbsp;&nbsp;</span>
 <ol style="color: rgb(0, 0, 0); font-family: Calibri;">
-  <big> </big>
+  <small> </small>
 </ol>
-<big><span style="color: rgb(0, 0, 0); font-family: Calibri;"
- lang="EN-GB">&nbsp;&nbsp;&nbsp; "<a
- style="text-decoration: none; color: rgb(0, 0, 0);"
+<span style="color: rgb(0, 0, 0); font-family: Calibri;" lang="EN-GB">&nbsp;&nbsp;&nbsp;
+"<a style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://link.springer.com/content/pdf/10.1007/s11747-020-00723-5.pdf">Effects
 of
 Front-of-Pack
@@ -500,24 +510,24 @@ Philippines</a><span style="font-family: Calibri;">",
 Mai 1999, 50, 3,
 621-632</span><br style="font-family: Calibri;">
 <br style="font-family: Calibri;">
-</big>
 <ol style="color: rgb(0, 0, 0); font-family: Calibri;">
-  <big> </big>
+  <small> </small>
 </ol>
 <ol style="color: rgb(0, 0, 0); font-family: Calibri;">
+  <small></small>
 </ol>
 <ul style="color: rgb(0, 0, 0); font-family: Calibri;">
+  <small></small>
 </ul>
 <p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; color: rgb(0, 0, 0); font-family: Calibri;"><big><i><a
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; color: rgb(0, 0, 0); font-family: Calibri;"><i><a
  name="other"></a>Other
-publications:</i></big></p>
-<big><br style="color: rgb(0, 0, 0); font-family: Calibri;">
-</big>
+publications:</i></p>
+<br style="color: rgb(0, 0, 0); font-family: Calibri;">
 <ol style="color: rgb(0, 0, 0); font-family: Calibri;" start="30">
-  <big> </big>
+  <small> </small>
 </ol>
-<big><span style="font-family: Calibri;">
+<span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; "</span><a
  style="text-decoration: none; font-family: Calibri;"
  href="http://www.google.fr/url?sa=t&amp;rct=j&amp;q=how%20does%20innovation%20in%20the%20pharmaceutical%20industry%20respond%20dubois&amp;source=web&amp;cd=1&amp;ved=0CDUQFjAA&amp;url=http%3A%2F%2Fflash-it.eu%2Fpublications%2Fdoc_download%2F414-how-does-innovation-in-the-pharmaceutical-industry-respond-to-policies-that-influence-expected-marke&amp;ei=LxyzUaf9A4KN0AW9n4C4CA&amp;usg=AFQjCNF5XhyH3AUfU_dok-KXAHNe0TmFKA"
@@ -624,27 +634,28 @@ No. 4, Winter
 des contrats pass&eacute;s entre coop&eacute;ratives et
 agriculteurs</a>", <b><i>Lettre
 INRA aux Entreprises</i></b>,
-September 2005, No 2</span></big>
+September 2005, No 2</span>
 <ul style="color: rgb(0, 0, 0); font-family: Calibri;">
-  <big> </big>
+  <small> </small>
   <ul>
-    <big> </big>
+    <small> </small>
   </ul>
-  <big> </big>
+  <small> </small>
   <ul>
-    <big> </big>
+    <small> </small>
   </ul>
-  <big> </big>
+  <small> </small>
   <ul>
-    <big> </big>
+    <small> </small>
   </ul>
+  <small></small>
 </ul>
 <p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; color: rgb(0, 0, 0); font-family: Calibri;"><big><span
- style="font-weight: bold;"></span></big></p>
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; color: rgb(0, 0, 0); font-family: Calibri;"><span
+ style="font-weight: bold;"></span><small></small></p>
 <p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; color: rgb(0, 0, 0); font-family: Calibri;"><big><span
- style="font-weight: bold;"></span></big></p>
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; color: rgb(0, 0, 0); font-family: Calibri;"><span
+ style="font-weight: bold;"></span></p>
 <big><span
  style="font-weight: bold; color: rgb(0, 0, 0); font-family: Calibri;"><span
  style="font-weight: bold;"></span>
