--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -26,16 +26,32 @@ papers:</i></p>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><i><br>
 </i></p>
 <span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"> <br>
-&nbsp;&nbsp;&nbsp; "<a style="text-decoration: none;"
- href="DuboisGriffithOConnell.pdf" target="_blank"><span
- style="color: rgb(0, 0, 0);">How Well
-Targeted are Soda Taxes</span>?</a>" with Rachel Griffith and
-Martin O'Connell, revise and resubmit at&nbsp;</span><span
- style="font-style: italic; font-family: Calibri;">American
-Economic Review</span><span style="font-family: Calibri;"> <br>
-&nbsp;&nbsp;&nbsp; <br>
+ style="font-family: Calibri;">&nbsp;</span><span
+ style="font-family: Calibri;">
+&nbsp;&nbsp;&nbsp; </span><span style="font-family: Calibri;"><span
+ lang="EN-US"><br>
 &nbsp;&nbsp;&nbsp; "<a
+ style="color: rgb(0, 0, 0); text-decoration: none;"
+ href="dgv05172019.pdf" target="_blank">Bargaining and International
+Reference Pricing in the Pharmaceutical Industry</a>" with Ashvin
+Gandhi
+and Shoshana Vasserman<br>
+<br>
+</span></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;
+"<a style="color: rgb(0, 0, 0); text-decoration: none;" href="dls.pdf"
+ target="_blank">Pooled Procurement of Drugs&nbsp;in Low and Middle
+Income Countries</a>" with&nbsp;Yassine Lefouili and St&eacute;phane
+Straub</span> <span lang="EN-US"><br>
+</span></span><span style="font-family: Calibri;"><br>
+&nbsp; &nbsp; "<a style="text-decoration: none; color: rgb(0, 0, 0);"
+ href="duboistunceljune2020.pdf" target="_blank">Identifying
+the Effects
+of
+Scientific Information and Recommendations on Physicians Prescribing
+Behavior</a>" with Tuba
+Tun&ccedil;el </span><br>
+<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp; <br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
  style="color: rgb(0, 0, 0); text-decoration: none;" href="dp.pdf"
  target="_blank">Price
 Dispersion and Information Frictions: Evidence from Supermarket
@@ -121,27 +137,7 @@ Empirical Evidence from Data on French Libraries</a>&rdquo;,
 with
 Adriana Hernandez-Perez and Marc Ivaldi</span> <span lang="EN-US"><br>
 <br>
-&nbsp;&nbsp;&nbsp; "<a
- style="color: rgb(0, 0, 0); text-decoration: none;" href="dls.pdf"
- target="_blank">Pooled Procurement of Drugs&nbsp;in Low and Middle
-Income Countries</a>" with&nbsp;Yassine Lefouili and St&eacute;phane
-Straub</span> <span lang="EN-US"><br>
-<br>
-&nbsp;&nbsp;&nbsp; "<a
- style="color: rgb(0, 0, 0); text-decoration: none;"
- href="dgv05172019.pdf" target="_blank">Bargaining and International
-Reference Pricing in the Pharmaceutical Industry</a>" with Ashvin
-Gandhi
-and Shoshana Vasserman</span></span><span style="font-family: Calibri;">
-&nbsp;&nbsp;&nbsp; <br>
-<br>
-&nbsp; &nbsp; "<a style="text-decoration: none; color: rgb(0, 0, 0);"
- href="duboistunceljune2020.pdf" target="_blank">Identifying
-the Effects
-of
-Scientific Information and Recommendations on Physicians Prescribing
-Behavior</a>" with Tuba
-Tun&ccedil;el <br>
+</span></span><span style="font-family: Calibri;"><br>
 </span>
 <ul style="font-family: Calibri;">
 </ul>
@@ -165,12 +161,7 @@ Val&eacute;rie Orozco <br>
 &nbsp;&nbsp;&nbsp; "Non
 Parametric Decomposition of the Distributional Change of Body Mass
 Index in China", with Ju Qiu <br>
-<br>
-&nbsp;&nbsp;&nbsp; "Incentives
-and
-Discrimination in Agricultural
-Contracts: Identification and Structural Estimation on French
-Data&rdquo; with Pascal Lavergne
+&nbsp;
 </span>
 <ul style="font-family: Calibri;">
 </ul>
