--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -41,9 +41,14 @@ and Shoshana Vasserman<br>
 "<a style="color: rgb(0, 0, 0); text-decoration: none;" href="dls.pdf"
  target="_blank">Pooled Procurement of Drugs&nbsp;in Low and Middle
 Income Countries</a>" with&nbsp;Yassine Lefouili and St&eacute;phane
-Straub</span> <span lang="EN-US"><br>
-</span></span><span style="font-family: Calibri;"><br>
-&nbsp; &nbsp; "<a style="text-decoration: none; color: rgb(0, 0, 0);"
+Straub,</span> </span><span style="font-family: Calibri;">revise and
+resubmit
+at <span style="font-style: italic;">European</span></span><span
+ style="font-style: italic; font-family: Calibri;">
+Economic Review<br>
+<br>
+</span><span style="font-family: Calibri;">&nbsp; &nbsp; "<a
+ style="text-decoration: none; color: rgb(0, 0, 0);"
  href="duboistunceljune2020.pdf" target="_blank">Identifying
 the Effects
 of
