--- a/other.htm
+++ b/other.htm
@@ -76,8 +76,8 @@ Conferences</a></h3>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
 of MIT-TSE
 Confrence on Health Economics with Amy Finkelstein and Jean Tirole,
-MIT, November 12, 2020. <a
- href="mit-tse_provisionalprogram_12nov2020.pdf" target="_blank">Program</a>.</p>
+MIT,&nbsp;(postponed). <a
+ href="mit-tse_provisionalprogram_12nov2020.pdf" target="_blank">Program</a>.&nbsp;</p>
   </li>
   <li>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
