--- a/Publications.htm
+++ b/Publications.htm
@@ -43,7 +43,7 @@ publications:</i></big></p>
  href="DuboisGriffithOConnell.pdf" target="_blank"><span
  style="color: rgb(0, 0, 0);">How Well
 Targeted are Soda Taxes</span>?</a>" with Rachel Griffith and
-Martin O'Connell, conditionally accepted at&nbsp;</span><span
+Martin O'Connell, forthcoming&nbsp;</span><span
  style="font-style: italic; font-family: Calibri; font-weight: bold;">American
 Economic Review</span><span style="font-family: Calibri;"><span
  style="font-weight: bold;"> <br>
