--- a/other.htm
+++ b/other.htm
@@ -286,7 +286,7 @@ October 8, 2020<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- MIT-TSE Conference
 on Health Economics, MIT Cambridge,&nbsp;November 12, 2020 (postponed)<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- CREST Paris, May 5, 2021, 2021<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- CREST Paris, May 5, 2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;
 Past :
 </span>
