--- a/other.htm
+++ b/other.htm
@@ -1263,9 +1263,8 @@ Florez</a>, Empirical
 IO of the Food Retailing Industry, (with
 B. Jullien),&nbsp;defended on July 21 2015, first
 placement: Assistant Professor, Universidade del Rosario, Bogota. </li>
-  <li><a target="_blank"
- href="https://www.tse-fr.eu/fr/people/arthur-alik-lagrange">Arthur
-Alik</a>, Three Essays on workfare
+  <li><a target="_blank" href="https://ideas.repec.org/f/pal565.html">Arthur
+Alik-Lagrange</a>, Three Essays on workfare
 in Low and Middle-Income
 Economies,&nbsp;defended on December 15 2016, first
 placement: Research Economist<span style="font-size: 10pt;" lang="EN-US"></span>,
