--- a/other.htm
+++ b/other.htm
@@ -270,21 +270,22 @@ Conferences</a></h3>
 :</p>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;" lang="EN-US"></span><span
- style="font-family: Calibri;"></span><br style="font-family: Calibri;">
-<span style="font-family: Calibri;" lang="EN-US">
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;-</span><span
- style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"><span style=""></span></span><span
- style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;" lang="EN-US"></span><span
- style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"> World
-Congress of the Econometric Society, August 21 2020<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - University of Vienna,
-October 8, 2020<br>
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - University of North Carolina, Chapell Hill,
+IO Virtual Seminar, 2020<br>
 <o:p></o:p></span>
-<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+<span style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - University of Vienna, Vienna Joint
+Economics Seminar October 8, 2020<br>
+<o:p></o:p></span>
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- MIT-TSE Conference
-on Health Economics, MIT Cambridge,&nbsp;November 12, 2020 (postponed)<br>
+on Health Economics, MIT Cambridge,&nbsp;November 12, 2020 (postponed
+2021)<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- CREST Paris, May 5, 2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;
@@ -292,6 +293,17 @@ Past :
 </span>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
+ style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;-</span><span
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"><span style=""></span></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;" lang="EN-US"></span><span
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"> World
+Congress of the Econometric Society, August 21 2020</span></p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
  style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- Keynote Lecture, LACEA Health
 Economics Network in Latin America, Lima,
@@ -311,14 +323,7 @@ Massachusetts, Amherst, March 27, 2020 (postponed)</span><span
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;- Ohio State University, March 25, 2020 (postponed)</span><span
- style="font-family: Calibri;" lang="EN-US"><span style=""><span
- style="font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;"></span></span></span><br
- style="font-family: Calibri;">
-<span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- Keynote Lecture, LACEA Health
-Economics Network in Latin America, Lima,
-Peru, May 18-19, 2020 (postponed)</span></p>
+ style="font-family: Calibri;" lang="EN-US"></span></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
  style="font-family: Calibri;" lang="EN-US"></span>&nbsp;&nbsp;&nbsp;
